--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
  body {
   font-family: papyrus, cursive;
   font-weight: bold;
-  }
+ }
 
  h1 {
   font-size: 175%;
@@ -84,6 +84,9 @@
 
  /* Desktop Layout*/
  @media (min-width: 992px) {
+  body {
+    font-size: 15px;
+  }
 
   .contentl {
     float: left;
